--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ktharr06">View on GitHub</a>
 
-          <h1 id="project_title">Test page 1</h1>
-          <h2 id="project_tagline">most boring of titles</h2>
+          <h1 id="project_title">store page 1</h1>
+          <h2 id="project_tagline">title change test delete</h2>
 
         </header>
     </div>
