--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Ktharr06.GitHub.io : ">
-
+    <meta name="author" content="">
+  
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ktharr06.GitHub.io</title>
+    <title>BIOSEQ: BioInformatics through Sequencing</title>
   </head>
 
   <body>
