--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="test description">
-    <meta name="author" content="KTH.BioSeq">
+    <meta name="description" content="KTH.BioSeq">
+    <meta name="author" content="Test author">
     
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     
