--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="KTH.BioSeq">
-    <meta name="author" content="Test author">
+    <meta name="description" content="KTH.BioSeq.desc">
+    <meta name="author" content="KTH.BioSeq.auth">
     
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     
-    <title>KTH.BioSeq Test</title>
+    <title>KTH.BioSeq Title</title>
   </head>
 
   <body>
