--- a/index.html
+++ b/index.html
@@ -16,14 +16,58 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ktharr06">View on GitHub</a>
+    <body>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="http://www.tufts.edu"> <img src="./brownlogo.gif" height="25px" width:"60%"/> </a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <!--<li class="active"><a href="#">Home</a></li>-->
+            <li><a href="index.html">Home</a></li>
+            <li><a href="summer_course.html">Summer Course</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Course Materials <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <!--
+                <li class="dropdown-header">By Topic</li>
+                <li><a href="#">topic1</a></li>
+                <li><a href="#">topic2</a></li>
+                <li><a href="#">topic3</a></li>
+                <li class="divider"></li>
+                -->
+                <li><a href="course_materials.html">View All </a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">By Project</li>
+                <li><a href="course_materials.html#genetics_of_race">Genetics of Race</a></li>
+                <li><a href="course_materials.html#proj2">Other project</a></li>
+                <li><a href="#">Another project </a></li>
+              </ul>
+            </li>
+<!--            <li><a href="wiki.html"> Wiki </a></li>-->
+            <li><a href="contact_info.html">Contact Info</a></li>
+          </ul>
+          <!--
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/">Default</a></li>
+            <li><a href="../navbar-static-top/">Static top</a></li>
+            <li class="active"><a href="./">Fixed top</a></li>
+          </ul>
+        -->
 
-          <h1 id="project_title">Test page 1</h1>
-          <h2 id="project_tagline">most boring of titles</h2>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
-        </header>
+    <div class="jumbotron" style="top-padding:-50">
+          <center> <h2 style="color: #0033CC">BioSeq: Bioinformatics Inquiry through Sequencing</h2> </center>
     </div>
 
     <!-- MAIN CONTENT -->
