--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://www.tufts.edu"> <img src="./brownlogo.gif" height="25px" width:"60%"/> </a>
+          <a class="navbar-brand" href="http://www.tufts.edu"> <img src="file:///P:/eepsmile.png" height="25px" width:"60%"/> </a>
         </div>
       </div>
     </div>
