--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=""> <img src="images/icon_download.png" height="25px" width:"60%"/> </a>
+          <a class="navbar-brand" href=""> <img src="https://cloud.githubusercontent.com/assets/10835194/6046558/5136a15a-ac71-11e4-848c-9bb947d99ef4.png" height="25px" width:"60%"/> </a>
         </div>
       </div>
     </div>
