--- a/index.html
+++ b/index.html
@@ -45,39 +45,12 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <!--<li class="active"><a href="#">Home</a></li>-->
             <li><a href="index.html">Home</a></li>
             <li><a href="summer_course.html">Summer Course</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Course Materials <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <!--
-                <li class="dropdown-header">By Topic</li>
-                <li><a href="#">topic1</a></li>
-                <li><a href="#">topic2</a></li>
-                <li><a href="#">topic3</a></li>
-                <li class="divider"></li>
-                -->
-                <li><a href="course_materials.html">View All </a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">By Project</li>
-                <li><a href="course_materials.html#genetics_of_race">Genetics of Race</a></li>
-                <li><a href="course_materials.html#proj2">Other project</a></li>
-                <li><a href="#">Another project </a></li>
-              </ul>
-            </li>
-<!--            <li><a href="wiki.html"> Wiki </a></li>-->
+            <li><a href="course_materials.html">Course Materials</a></li>
             <li><a href="contact_info.html">Contact Info</a></li>
           </ul>
-          <!--
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top</a></li>
-          </ul>
-        -->
-        
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
 
