--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="KTH.BioSeq.desc">
     <meta name="author" content="KTH.BioSeq.auth">
 
-    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
     <title>KTH.BioSeq Title</title>
   </head>
 
