--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="jumbotron" style="top-padding:-50">
-          <center> <h2 style="color: #0033CC">BioSeq: Bioinformatics Inquiry through Sequencing</h2> </center>
+          <center> <h2>BioSeq: Bioinformatics Inquiry through Sequencing</h2> </center>
     </div>
 
     <!-- MAIN CONTENT -->
