--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="KTH.BioSeq.desc">
     <meta name="author" content="KTH.BioSeq.auth">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet2.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>KTH.BioSeq Title</title>
   </head>
