--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="summer_course.html">Summer Course</a></li>
+            <li><a href="page_1.html">Summer Course</a></li>
             <li><a href="course_materials.html">Course Materials</a></li>
             <li><a href="contact_info.html">Contact Info</a></li>
           </ul>
