--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         <h3>
 <a id="change-header-1-test" class="anchor" href="#change-header-1-test" aria-hidden="true"><span class="octicon octicon-link"></span></a>Change header 1 test.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Testing, testing, <a href="page1.html"testing</a>, 1...2...3...</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
