--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3>
 <a id="change-header-1-test" class="anchor" href="#change-header-1-test" aria-hidden="true"><span class="octicon octicon-link"></span></a>Change header 1 test.</h3>
 
-<p>Testing, testing, <a href="page1.html"testing</a>, 1...2...3...</p>
+<p>Testing, testing, <a href="page1.html">testing</a>, 1...2...3...</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
