--- a/Page2.html
+++ b/Page2.html
@@ -86,7 +86,9 @@
       </h4>
       <br>
 	  <h4> The guidelines for proposal submissions can be found <a href="OpenAppGuidelines.pdf">here</a>
-	  <br>
+	  </h4>
+      <br>
+      <h4>An example proposal can be viewed <a href="page1.html">here</a></h4>
 
     </div>
 
