--- a/page1.html
+++ b/page1.html
@@ -23,5 +23,9 @@
 
         </header>
     </div>
-
-  <h3> This is a test text. She sells sea shells by the sea shore.</h3>
+    
+    <div> 
+      <h3> This is test text. She sells sea shells by the sea shore.</h3>
+    </div>
+    
+  </body>
