--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ktharr06">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/ktharr06">Do not click this link</a>
 
           <h1 id="project_title">New page 1</h1>
           <h2 id="project_tagline">Success?</h2>
